<resources>
    <string name="app_name">UkraineField</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reuters_invasion_map_updated_date">Reuters Invasion map | Updated: Date</string>
    <string name="posted_at">Posted at:</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="open_article_in_browser">Open Article in Browser</string>
    <string name="open_map_in_browser">Open Map in Browser</string>
    <string name="auto_play_videos">Autoplay videos</string>
    <string name="media">Media</string>
    <string name="bookmark">Bookmark</string>
    <string name="remove_bookmark">Unbookmark</string>
    <string name="feed">Feed</string>
    <string name="ukraine_map">Ukraine Map</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="reset_bookmarks_summary">Removes all bookmarked items</string>
    <string name="reset_bookmarks">Reset bookmarks</string>
    <string name="official_links">Official Links</string>
    <string name="news_sources_summary">All the news source we use in our app</string>
    <string name="news_sources_title">News sources</string>
    <string name="github_summary">GitHub is the place where you can find all the code that make this app possible</string>
    <string name="github_title">GitHub Repositories</string>
    <string name="twitter_summary">Twitter is the place where we make announcements about the app</string>
    <string name="twitter_title">Twitter account</string>
    <string name="version">Version:</string>
    <string name="news_sources">News sources</string>
    <string name="show_russian_sources">Show Russian news sources</string>
    <string name="show_ukraine_sources">Show Ukrainian news sources</string>
    <string name="no_news_found">No news found, try changing your filters on the Settings page</string>
    <string name="show_telegram_sources">Show Telegram sources</string>
    <string name="show_twitter_sources">Show Twitter sources</string>
</resources>