<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="media_category"
        app:icon="@drawable/ic_baseline_perm_media_24"
        app:title="@string/media">


    <SwitchPreferenceCompat
        app:key="autoplayVideos"
        app:title="@string/auto_play_videos"
        app:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="bookmarks_category"
        app:icon="@drawable/ic_baseline_bookmark_24"
        app:title="@string/bookmarks">

        <Preference
            app:key="reset_bookmarks"
            app:summary="@string/reset_bookmarks_summary"
            app:title="@string/reset_bookmarks"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="links_category"
        app:icon="@drawable/ic_baseline_link_24"
        app:title="@string/official_links">

        <Preference
            app:key="news_sources_link"
            app:summary="@string/news_sources_summary"
            app:title="@string/news_sources_title"/>

        <Preference
            app:key="github_link"
            app:summary="@string/github_summary"
            app:title="@string/github_title"/>

        <Preference
            app:key="twitter_link"
            app:summary="@string/twitter_summary"
            app:title="@string/twitter_title"/>


    </PreferenceCategory>

    <PreferenceCategory
        app:key="version_category"
        app:icon="@drawable/ic_baseline_adb_24"
        app:title="Version: 1.0"/>


</PreferenceScreen>
